[project]
name = "arg-inundaciones"
version = "0.1.0"
description = "Mapeo automarizado de inundaciones en Argentina con imagenes Sentinel 1 y 2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "odc>=0.1.2",
    "odc-stac>=0.4.0",
    "pip>=25.1.1",
    "pyarrow>=20.0.0",
    "pystac-client>=0.8.6",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "rioxarray>=0.19.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]