[project]
name = "arg-inundaciones"
version = "0.1.0"
description = "Mapeo automarizado de inundaciones en Argentina con imagenes Sentinel 1 y 2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "geojson>=3.2.0",
    "geopandas>=1.1.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "odc>=0.1.2",
    "odc-stac>=0.4.0",
    "openpyxl>=3.1.5",
    "pip>=25.1.1",
    "pyarrow>=20.0.0",
    "pystac-client>=0.8.6",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "python-levenshtein>=0.27.1",
    "requests>=2.32.4",
    "requests-cache>=1.2.1",
    "rioxarray>=0.19.0",
    "seaborn>=0.13.2",
    "typing>=3.10.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
